@@ -29,16 +29,22 @@ public class MovimientoController {
         List<Movimiento> todos = movimientoService.getMovimientosByUserId(user.getId());
         // Obtener todos los meses/años únicos con movimientos
         List<YearMonth> mesesDisponibles = todos.stream()
-            .map(m -> YearMonth.from(m.getFecha() != null ? m.getFecha() : LocalDate.now()))
+            .map(m -> YearMonth.of(m.getAnioAsignado(), m.getMesAsignado()))
             .distinct()
             .sorted((a, b) -> b.compareTo(a)) // Descendente: el más reciente primero
-            .toList();
+            .collect(java.util.stream.Collectors.toList());
+        // Añadir el mes actual si no está
+        YearMonth mesActual = YearMonth.now();
+        if (!mesesDisponibles.contains(mesActual)) {
+            mesesDisponibles.add(0, mesActual);
+        }
+        mesesDisponibles = mesesDisponibles.stream().distinct().sorted((a, b) -> b.compareTo(a)).toList();
         // Si no se especifica mes/año, usar el actual
         YearMonth actual = YearMonth.now();
         YearMonth seleccionado = (mes != null && anio != null) ? YearMonth.of(anio, mes) : (mesesDisponibles.isEmpty() ? actual : mesesDisponibles.get(0));
         // Filtrar movimientos del mes/año seleccionado (ordenar por id descendente)
         List<Movimiento> movimientos = todos.stream()
-            .filter(m -> YearMonth.from(m.getFecha() != null ? m.getFecha() : LocalDate.now()).equals(seleccionado))
+            .filter(m -> m.getMesAsignado() == seleccionado.getMonthValue() && m.getAnioAsignado() == seleccionado.getYear())
             .sorted((a, b) -> b.getId().compareTo(a.getId()))
             .toList();
         double totalIngresos = movimientos.stream().filter(Movimiento::isIngreso).mapToDouble(Movimiento::getCantidad).sum();
@@ -55,25 +61,37 @@ public class MovimientoController {
     }
 
     @PostMapping("/movimientos/add")
-    public String addMovimiento(@ModelAttribute Movimiento nuevoMovimiento, HttpSession session) {
+    public String addMovimiento(@ModelAttribute Movimiento nuevoMovimiento, @RequestParam(value = "mes", required = false) Integer mes,
+                                @RequestParam(value = "anio", required = false) Integer anio, HttpSession session) {
         User user = (User) session.getAttribute("user");
         if (user == null) {
             return "redirect:/login";
         }
         nuevoMovimiento.setUserId(user.getId());
         nuevoMovimiento.setFecha(LocalDate.now());
+        // Asignar mes y año lógico
+        LocalDate now = LocalDate.now();
+        int mesAsignado = (mes != null) ? mes : now.getMonthValue();
+        int anioAsignado = (anio != null) ? anio : now.getYear();
+        nuevoMovimiento.setMesAsignado(mesAsignado);
+        nuevoMovimiento.setAnioAsignado(anioAsignado);
         movimientoService.addMovimiento(nuevoMovimiento);
-        return "redirect:/movimientos";
+        return "redirect:/movimientos?mes=" + mesAsignado + "&anio=" + anioAsignado;
     }
 
     @PostMapping("/movimientos/delete/{id}")
-    public String deleteMovimiento(@PathVariable Long id, HttpSession session) {
+    public String deleteMovimiento(@PathVariable Long id, @RequestParam(value = "mes", required = false) Integer mes,
+                                   @RequestParam(value = "anio", required = false) Integer anio, HttpSession session) {
         User user = (User) session.getAttribute("user");
         if (user == null) {
             return "redirect:/login";
         }
         movimientoService.deleteMovimiento(id, user.getId());
-        return "redirect:/movimientos";
+        if (mes != null && anio != null) {
+            return "redirect:/movimientos?mes=" + mes + "&anio=" + anio;
+        } else {
+            return "redirect:/movimientos";
+        }
     }
 
     @PostMapping("/movimientos/edit/{id}")
